# esp32-idf-sqlite3

./: CMakeLists.txt  component.mk  config_ext.h  esp32.c  shox96_0_2.c
include/: sqlite3.h
